# sma_test

./: .clang-format  CMakeLists.txt  README.md  main  main.cpp  sma_test_results.xlsx
inc/: Aspose.Cells.h  sma.h
inc/Aspose.Cells/: AboveAverage.h  AbstractCalculationEngine.h  AbstractFormulaChangeMonitor.h  AbstractInterruptMonitor.h  AbstractTextLoadOptions.h  AccentEquationNode.h  AccessCacheOptions.h  ActiveXControl.h  ActiveXControlBase.h  ActiveXPersistenceType.h  AdjustFontSizeForRowType.h  AdvancedFilter.h  ArcShape.h  Area.h  ArrayEquationNode.h  AutoFillType.h  AutoFilter.h  AutoFitMergedCellsType.h  AutoFitWrappedTextType.h  AutoFitterOptions.h  AutoNumberedBulletValue.h  AutoShapeType.h  AutomaticFill.h  Axis.h  AxisBins.h  AxisType.h  BackgroundMode.h  BackgroundType.h  Bar3DShapeType.h  BarEquationNode.h  BaseShapeGuide.h  Bevel.h  BevelPresetType.h  BevelType.h  Border.h  BorderBoxEquationNode.h  BorderCollection.h  BorderType.h  BoxEquationNode.h  BubbleSizeRepresents.h  (+724 more)
